// Vitest Snapshot v1

exports[`<Paginator /> > check back button works 1`] = `
<DocumentFragment>
  <div
    class="ps-max-w-screen-md"
  >
    <h3
      class="ps-mb-8 ps-prose-sm"
    >
      Page 1/18
    </h3>
    <section>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Usitas
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Comis defui ex ille lobortis molior premo ulciscor. Diam huic iustum mauris quia voco. Commodo ibidem iriure nibh nostrud olim scisco vereor. Conventi...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Comis Ex
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Brevitas conventio cui dolor minim os. Amet lenis quibus. Adipiscing exerci ille immitto lucidus roto valetudo volutpat. Caecus causa dolore eros eum ...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Caecus Enim Macto Persto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Blandit erat luptatum praesent refoveo veniam. Bene distineo veniam. Eu facilisi feugiat ille. Molior nunc proprius turpis. Abdo eu similis. Accumsan ...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          In
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Adipiscing at ex hos. Ratis refero tamen. Amet interdico jus pala rusticus typicus. Gravis importunus interdico iriure pala paratus paulatim populus r...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Appellatio Eros Letalis
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Conventio in interdico saluto vulputate. Camur commoveo elit feugiat macto meus nutus similis utinam vulputate. Paulatim premo usitas. Consectetuer er...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Dolus Iaceo Tum Verto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Jumentum neo quidne tincidunt ut. Iaceo ideo jugis velit. Adipiscing damnum euismod neque pertineo praemitto tation te valde valetudo. Capto enim leni...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Defui Exputo Gilvus Suscipit
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Capto diam iaceo pertineo plaga quidem quidne suscipere ullamcorper virtus. Antehabeo distineo eu euismod iusto letalis natu sino suscipit. Appellatio...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Eros Iriure Venio Vulpes
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Adipiscing conventio fere iaceo magna quidne sed. Facilisis ratis scisco uxor. Elit exerci ymo zelus. Comis ea nutus pala quae refero sudo te ut. Aute...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Eligo Praemitto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Erat haero iaceo nibh odio ratis roto. Aptent typicus valde. Aliquam macto melior quadrum suscipere. Facilisis fere nibh paulatim tego vicis.

Erat et...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Abluo Aliquam Inhibeo Luptatum
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Abluo defui odio vel. Dolus ludus molior ullamcorper. Et letalis meus utrum uxor vel. Ad amet defui hos imputo praesent roto ut uxor. Augue erat eum l...
        </p>
      </article>
    </section>
    <div
      class="ps-sticky lg:ps-bottom-12 ps-bottom-4"
    >
      <nav
        aria-label="Pagination Navigation"
        role="navigation"
      >
        <ul
          class="ps-list-none ps-flex ps-flex-row ps-justify-center ps-mx-auto ps-mt-auto ps-mb-4 [&>li]:ps-p-0"
        >
          <li>
            <button
              aria-label="Go to Previous Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-l-2"
              disabled=""
              id="back-btn"
            >
              &lt;
            </button>
          </li>
          <li>
            <button
              aria-current="true"
              aria-label="Current Page, Page 1"
              class="
          ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-blue-700 ps-border-2
          "
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 2"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 3"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              3
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 4"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              4
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 5"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              5
            </button>
          </li>
          <li>
            <button
              aria-label="Expand Hidden Buttons"
              class="ps-hidden md:ps-block ps-h-16 ps-w-12 ps-border-2 ps-border-black ps-bg-slate-200 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300\\"
            }"
            >
              ...
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 12"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              12
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 13"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              13
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 14"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              14
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 15"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              15
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 16"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              16
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 17"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              17
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 18"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              18
            </button>
          </li>
          <li>
            <button
              aria-label="Go to Next Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-r-2"
              id="next-btn"
            >
              &gt;
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Paginator /> > check next button works 1`] = `
<DocumentFragment>
  <div
    class="ps-max-w-screen-md"
  >
    <h3
      class="ps-mb-8 ps-prose-sm"
    >
      Page 2/18
    </h3>
    <section>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Esca
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Comis duis facilisis iustum magna metuo praesent quidem refero uxor. Augue distineo elit lobortis nobis refoveo vulpes. Consequat conventio fere hos l...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Damnum Dignissim
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Abluo accumsan brevitas eligo fere ille minim quidne rusticus tamen. Abdo abigo amet hos iaceo lucidus. Adipiscing hendrerit immitto metuo neo pertine...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Dolus Iaceo Metuo
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Abbas aptent decet nostrud occuro os pecus ullamcorper valde vereor. Dolus ex saluto scisco sed tation usitas ut. Accumsan camur esca nimis obruo pala...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Abigo Eros Persto Sed
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Damnum iusto letalis macto pecus persto pertineo quibus rusticus. Comis cui distineo euismod gemino illum odio pneum sudo valetudo. Accumsan hos iaceo...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Elit Huic Saluto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Aliquam macto pneum vicis. Dolore et exerci hendrerit scisco tation utinam. Exputo genitus nimis qui sit vel velit wisi. Facilisi ideo imputo meus qui...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Dolor Elit Probo
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Consequat ex fere gravis macto os. Acsi consequat dolore os validus. Aptent hendrerit huic pala praesent quibus scisco ullamcorper vicis. At blandit c...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Facilisis Tego Torqueo
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Adipiscing brevitas consectetuer diam duis magna modo pneum sudo. Et hendrerit quidem. Autem blandit ibidem pagus quae quia ratis sagaciter si. Anteha...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Veniam
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Aliquam blandit brevitas. Abbas brevitas defui euismod letalis molior sudo tincidunt vero. Abico augue lucidus melior tincidunt velit. Facilisi iusto ...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Bene Nunc Refero
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Capto luptatum pneum sino utinam. Abbas hendrerit iustum lenis lucidus ludus modo quia quidem. Humo neque ullamcorper. Ibidem nostrud patria valetudo....
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Populus
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Imputo ut vicis. Abigo cogo eu incassum quidne tego volutpat. Consectetuer eligo illum tego typicus. Minim nutus probo suscipit. At suscipit veniam vi...
        </p>
      </article>
    </section>
    <div
      class="ps-sticky lg:ps-bottom-12 ps-bottom-4"
    >
      <nav
        aria-label="Pagination Navigation"
        role="navigation"
      >
        <ul
          class="ps-list-none ps-flex ps-flex-row ps-justify-center ps-mx-auto ps-mt-auto ps-mb-4 [&>li]:ps-p-0"
        >
          <li>
            <button
              aria-label="Go to Previous Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-l-2"
              id="back-btn"
            >
              &lt;
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 1"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-current="true"
              aria-label="Current Page, Page 2"
              class="
          ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-blue-700 ps-border-2
          "
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 3"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              3
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 4"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              4
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 5"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              5
            </button>
          </li>
          <li>
            <button
              aria-label="Expand Hidden Buttons"
              class="ps-hidden md:ps-block ps-h-16 ps-w-12 ps-border-2 ps-border-black ps-bg-slate-200 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300\\"
            }"
            >
              ...
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 12"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              12
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 13"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              13
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 14"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              14
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 15"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              15
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 16"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              16
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 17"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              17
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 18"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              18
            </button>
          </li>
          <li>
            <button
              aria-label="Go to Next Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-r-2"
              id="next-btn"
            >
              &gt;
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Paginator /> > should render the paginated data 1`] = `
<DocumentFragment>
  <div
    class="ps-max-w-screen-md"
  >
    <h3
      class="ps-mb-8 ps-prose-sm"
    >
      Page 1/18
    </h3>
    <section>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Usitas
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Comis defui ex ille lobortis molior premo ulciscor. Diam huic iustum mauris quia voco. Commodo ibidem iriure nibh nostrud olim scisco vereor. Conventi...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Comis Ex
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Brevitas conventio cui dolor minim os. Amet lenis quibus. Adipiscing exerci ille immitto lucidus roto valetudo volutpat. Caecus causa dolore eros eum ...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Caecus Enim Macto Persto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Blandit erat luptatum praesent refoveo veniam. Bene distineo veniam. Eu facilisi feugiat ille. Molior nunc proprius turpis. Abdo eu similis. Accumsan ...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          In
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Adipiscing at ex hos. Ratis refero tamen. Amet interdico jus pala rusticus typicus. Gravis importunus interdico iriure pala paratus paulatim populus r...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Appellatio Eros Letalis
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Conventio in interdico saluto vulputate. Camur commoveo elit feugiat macto meus nutus similis utinam vulputate. Paulatim premo usitas. Consectetuer er...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Dolus Iaceo Tum Verto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Jumentum neo quidne tincidunt ut. Iaceo ideo jugis velit. Adipiscing damnum euismod neque pertineo praemitto tation te valde valetudo. Capto enim leni...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Defui Exputo Gilvus Suscipit
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Capto diam iaceo pertineo plaga quidem quidne suscipere ullamcorper virtus. Antehabeo distineo eu euismod iusto letalis natu sino suscipit. Appellatio...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Eros Iriure Venio Vulpes
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Adipiscing conventio fere iaceo magna quidne sed. Facilisis ratis scisco uxor. Elit exerci ymo zelus. Comis ea nutus pala quae refero sudo te ut. Aute...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Eligo Praemitto
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Erat haero iaceo nibh odio ratis roto. Aptent typicus valde. Aliquam macto melior quadrum suscipere. Facilisis fere nibh paulatim tego vicis.

Erat et...
        </p>
      </article>
      <article
        class="flex flex-col p-3 w-fit mx-auto mb-10"
      >
        <h2
          class="justify-start my-auto text-2xl mb-2"
        >
          Abluo Aliquam Inhibeo Luptatum
        </h2>
        <p
          class="max-w-prose my-2"
        >
          Abluo defui odio vel. Dolus ludus molior ullamcorper. Et letalis meus utrum uxor vel. Ad amet defui hos imputo praesent roto ut uxor. Augue erat eum l...
        </p>
      </article>
    </section>
    <div
      class="ps-sticky lg:ps-bottom-12 ps-bottom-4"
    >
      <nav
        aria-label="Pagination Navigation"
        role="navigation"
      >
        <ul
          class="ps-list-none ps-flex ps-flex-row ps-justify-center ps-mx-auto ps-mt-auto ps-mb-4 [&>li]:ps-p-0"
        >
          <li>
            <button
              aria-label="Go to Previous Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-l-2"
              disabled=""
              id="back-btn"
            >
              &lt;
            </button>
          </li>
          <li>
            <button
              aria-current="true"
              aria-label="Current Page, Page 1"
              class="
          ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-blue-700 ps-border-2
          "
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 2"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 3"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              3
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 4"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              4
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 5"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              5
            </button>
          </li>
          <li>
            <button
              aria-label="Expand Hidden Buttons"
              class="ps-hidden md:ps-block ps-h-16 ps-w-12 ps-border-2 ps-border-black ps-bg-slate-200 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300\\"
            }"
            >
              ...
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 12"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              12
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 13"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              13
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 14"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              14
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 15"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              15
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 16"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              16
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 17"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              17
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Go to Page 18"
              class="
          ps-hidden md:ps-block
          ps-h-16 ps-w-12 ps-border-t-2 ps-border-b-2 ps-border-black ps-bg-white hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 
          "
            >
              18
            </button>
          </li>
          <li>
            <button
              aria-label="Go to Next Page"
              class="ps-h-16 ps-w-12 disabled:ps-bg-gray-500 hover:ps-bg-blue-300 focus:ps-bg-blue-200 focus:ps-border-blue-300 ps-border-y-2 ps-border-black ps-bg-white ps-border-r-2"
              id="next-btn"
            >
              &gt;
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
